# vln_test

./: .gitignore  intro.md  params.txt  requirements.txt
src/: .gitignore
src/aruco_detector/: CMakeLists.txt  package.xml
src/aruco_detector/scripts/: aruco_node.py
src/llm_model/: CMakeLists.txt  package.xml
src/llm_model/scripts/: grounding_dino_node.py  ins_processor.py
src/llm_model/src/: english_instruction_processor.py  grounding_dino_node.py  ins_processor.py  process_ins.py  test_yolo.py  vlm_loader.py
src/llm_model/src/results/result_0_barrel_1/: detection_data.txt
src/llm_model/src/results/result_10_bench_3/: detection_data.txt
src/llm_model/src/results/result_11_tree_3_1/: detection_data.txt
src/llm_model/src/results/result_12_billboard_0/: detection_data.txt
src/llm_model/src/results/result_13_traffic_cone_0/: detection_data.txt
src/llm_model/src/results/result_14_bench_1/: detection_data.txt
src/llm_model/src/results/result_15_tree_2_0/: detection_data.txt
src/llm_model/src/results/result_16_billboard_3/: detection_data.txt
src/llm_model/src/results/result_17_tree_2_1/: detection_data.txt
src/llm_model/src/results/result_18_billboard_4_0/: detection_data.txt
src/llm_model/src/results/result_19_billboard_4_1/: detection_data.txt
src/llm_model/src/results/result_1_bench_5/: detection_data.txt
src/llm_model/src/results/result_20_fire_hydrant_0/: detection_data.txt
src/llm_model/src/results/result_21_tree_1_1/: detection_data.txt
src/llm_model/src/results/result_22_barrel_0/: detection_data.txt
src/llm_model/src/results/result_23_tree_0_0/: detection_data.txt
src/llm_model/src/results/result_24_trash_3/: detection_data.txt
src/llm_model/src/results/result_25_tractor_trailer_0/: detection_data.txt
src/llm_model/src/results/result_26_bench_4/: detection_data.txt
src/llm_model/src/results/result_27_trash_1/: detection_data.txt
src/llm_model/src/results/result_28_tree_1_0/: detection_data.txt
src/llm_model/src/results/result_29_trash_2/: detection_data.txt
src/llm_model/src/results/result_2_tree_3_0/: detection_data.txt
src/llm_model/src/results/result_30_trash_0/: detection_data.txt
src/llm_model/src/results/result_3_billboard_2/: detection_data.txt
src/llm_model/src/results/result_4_billboard_1/: detection_data.txt
src/llm_model/src/results/result_5_tree_0_1/: detection_data.txt
src/llm_model/src/results/result_6_trash_5/: detection_data.txt
src/llm_model/src/results/result_7_bench_2/: detection_data.txt
src/llm_model/src/results/result_8_bench_0/: detection_data.txt
src/llm_model/src/results/result_9_trash_4/: detection_data.txt
src/magv_vln_msgs/: CMakeLists.txt  package.xml
src/magv_vln_msgs/msg/: ArucoInfo.msg  ArucoMarker.msg  BoundingBox2D.msg  DetectedObject.msg  DetectedObjectArray.msg  Detection2D.msg  Detection2DArray.msg  OptimalPath.msg  PathPoint.msg  PerformanceMetrics.msg  PositionCommand.msg  SubTask.msg  TaskOptimization.msg  ValueMap.msg  VehicleStatus.msg
src/optimal_planner/: CMakeLists.txt  package.xml
src/optimal_planner/include/optimal_planner/: astar_planner.h
src/optimal_planner/src/: astar_planner.cpp  optimal_planner_node.cpp  performance_monitor_node.cpp  task_optimizer_node.cpp
src/pointcloud_to_grid/: CMakeLists.txt  package.xml
src/pointcloud_to_grid/cfg/: MyParams.cfg
src/pointcloud_to_grid/include/pointcloud_to_grid/: pointcloud_to_grid_core.hpp
src/pointcloud_to_grid/src/: pointcloud_to_grid_node.cpp
src/vln_mock/: CMakeLists.txt  README.md  package.xml
src/vln_mock/launch/: enhanced_vln_system.launch  vln_system.launch
src/vln_mock/params/: system_params.yaml
src/vln_mock/rviz/: vln_system.rviz
src/vln_mock/scripts/: controller.py  core_node.py  ground_dino_simulator.py  instruction_latch_bridge.py  marker_manager.py  odom_tf_broadcaster.py  vehicle_status_manager.py  vln_demo_mock.py
src/vln_mock/src/: vehicle_status_manager.cpp
