<?xml version="1.0"?>
<package format="2">
  <name>magv_vln_msgs</name>
  <version>0.0.0</version>
  <description>The magv_vln_msgs package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>