<?xml version="1.0"?>
<package format="2">
  <name>vln_mock</name>
  <version>0.0.1</version>
  <description>VLN mock package for demonstration</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib</depend>
  <depend>magv_vln_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>
</package>
